apps/clubs/cool-club/outlinewiki/prod/networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cool-club-outlinewiki-httpproxy
spec:
  virtualhost:
    fqdn: wiki.cool-club.etsmtl.club
    tls:
      secretName: cool-club-outlinewiki-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: cool-club-outlinewiki-svc
          port: 3000
      timeoutPolicy:
        idle: 600s
        response: 600s
